--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -2,8 +2,8 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  username:
-  password:
+  username: vagrant
+  password: vagrant
   # If you using docker the host should be "db"
   host: localhost
   port: 5432
